# coherencebench

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_submission.md
.github/workflows/: ci.yml
apps/: README.md  human_benchmark.html
configs/: run_a_baseline.yaml  run_a_baseline_atc.yaml  run_a_baseline_hospital.yaml  run_b_intervention.yaml  run_c_context_reset.yaml  run_d_checklist.yaml  run_e_cross_model.yaml
data/: README.md
data/air_traffic_control/: seed_1001.json  seed_123.json  seed_42.json  seed_456.json  seed_789.json
data/eval/: README.md
data/eval/network/: seed_1001.json  seed_123.json  seed_42.json  seed_456.json  seed_789.json
data/hospital/: seed_1001.json  seed_123.json  seed_42.json  seed_456.json  seed_789.json
data/network/: seed_1001.json  seed_123.json  seed_42.json  seed_456.json  seed_789.json
data/power_grid/: seed_1001.json  seed_123.json  seed_42.json  seed_456.json  seed_789.json
docs/: claude-haiku.html  gemini-25-flash.html  gpt54-seed42.html  gpt54-seed456.html  gpt54.html  index.html
docs/superpowers/plans/: 2026-04-02-coherencebench.md
paper/: main.tex  references.bib
results/run_a_baseline/claude-cli/seed_123/: raw_results.jsonl
results/run_a_baseline/claude-cli/seed_456/: raw_results.jsonl
results/run_a_baseline/claude/seed_1001/: raw_results.jsonl
results/run_a_baseline/claude/seed_123/: raw_results.jsonl
results/run_a_baseline/claude/seed_42/: summary.json  (+3 more)
scripts/: compute_baselines.py  export_data.py  generate_paper_figures.py  run_benchmark.py  run_single.py
src/: __init__.py  analyzer.py  cli.py  generator.py  metrics.py  runner.py  scenario.py  visualizer.py
src/providers/: __init__.py  anthropic.py  base.py  claude_cli.py  codex_cli.py  gemini_cli.py  google.py  groq.py  mlvoca.py  ollama.py  openai.py  openrouter.py  together.py
src/scenarios/: __init__.py  air_traffic_control.py  base.py  hospital.py  network.py  power_grid.py
src/viewer/: __init__.py  generate.py
tests/: test_analyzer.py  test_anthropic_provider.py  test_baselines.py  test_generator.py  test_metrics.py  test_run_benchmark.py  test_run_single.py  test_runner.py  test_scenario.py  test_scenarios.py  test_visualizer.py
(+21 files in other folders)
