[project]
name = "coherencebench"
version = "0.1.0"
description = "Research framework for measuring multi-factor attention collapse in long-running autonomous AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "PranaAlpha Labs", email = "research@pranaalpha.com"},
]
keywords = [
    "benchmark", "agents", "attention-collapse", "llm", "evaluation",
    "autonomous-agents", "coherence", "ai-safety", "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "together>=1.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.urls]
Homepage = "https://github.com/Venkateshwar-PortoAI/coherencebench"
Repository = "https://github.com/Venkateshwar-PortoAI/coherencebench.git"
Documentation = "https://github.com/Venkateshwar-PortoAI/coherencebench/blob/main/README.md"
"Bug Tracker" = "https://github.com/Venkateshwar-PortoAI/coherencebench/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
